--- a/assets/less/responsive/mobile/views/settings.less
+++ b/assets/less/responsive/mobile/views/settings.less
@@ -40,9 +40,8 @@
 					.column(12);
 					margin-bottom: 5px;
 				}
-				.button {
+				button {
 					.column(12);
-					margin: 0 2% 0 0 !important;
 				}
 				&#nickname {
 					button {
@@ -59,14 +58,21 @@
 				}
 				.config {
 					button {
-						.column(12);
+						.width(12);
 						margin-top: 10px;
 						margin-bottom: 10px;
 						height: 40px;
 					}
 					.whoMaySeeIt {
-						.column(12);
+						.width(12);
 					}
+				}
+			}
+			.settingsFormButton {
+				.column(12);
+				margin-bottom: 5px;
+				&:last-child {
+					margin-bottom: 10px;
 				}
 			}
 		}
